--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "scripts": {
     "start": "electron .",
     "postinstall": "electron-builder install-app-deps",
-    "build": "electron-builder --linux",
-    "release": "electron-builder --windows --publish always"
+    "build": "electron-builder --windows --linux",
+    "release": "electron-builder --windows --linux --publish always"
   },
   "repository": {
     "type": "git",
@@ -36,8 +36,8 @@
   },
   "homepage": "https://github.com/JoahTheron/DSTools_Bot_Obfuscated#readme",
   "devDependencies": {
-    "electron": "^13.1.7",
-    "electron-builder": "^22.13.1"
+    "electron": "^13.6.0",
+    "electron-builder": "^22.11.7"
   },
   "dependencies": {
     "electron-is-dev": "^2.0.0",
