--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dstools_bot",
-  "version": "0.3.9",
+  "version": "0.4.0",
   "description": "Automate your Gameplay for Tribal Wars",
   "main": "src/index.js",
   "build": {
@@ -40,6 +40,7 @@
     "electron-builder": "^22.11.7"
   },
   "dependencies": {
+    "@sentry/electron": "^2.5.4",
     "electron-is-dev": "^2.0.0",
     "electron-updater": "^4.3.9",
     "yargs": "^17.0.1"
