--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
   },
   "dependencies": {
     "@sentry/electron": "^2.5.4",
+    "btoa": "^1.2.1",
     "electron-browser-storage": "^1.0.7",
     "electron-is-dev": "^2.0.0",
     "electron-updater": "^4.3.9",
+    "moment": "^2.29.4",
     "yargs": "^17.0.1"
   },
   "browserslist": [
